Revert "login.css: Fix button styling on iOS"
This reverts commit f79bb210ec6e78c135db7b006ae447f37be4ca7e.

--- a/src/browser/pages/login.css
+++ b/src/browser/pages/login.css
@@ -26,7 +26,7 @@ body {
   border: 1px solid #ddd;
   box-sizing: border-box;
   color: black;
-  width: 100%;
+  flex: 1;
   padding: 16px;
 }
 
@@ -34,16 +34,6 @@ body {
   display: none;
 }
 
-.login-form > .field > input[type="submit"] {
-  position: absolute;
-  left: -9999px;
-}
-
-.login-form > .field > input[type="submit"]:focus + label {
-  border: 2px solid #000;
-}
-
-.login-form > .field > .submit{
+.login-form > .field > .submit {
   margin-left: 20px;
-  flex-shrink: 0;
 }
